--- a/css/styles.css
+++ b/css/styles.css
@@ -1,42 +1,56 @@
 body {
+    margin: 0;
     font-family: 'Ubuntu', sans-serif;
-    background-color: #f8f8f8;
 }
 
-.site-title {
+/* typography */
+
+h1 {
     font-family: 'Lora', serif;
-    text-align: center;
-    font-size: 3.375rem;
+    font-weight: 400;
     color: #143774;
+    font-size: 2rem;
+    margin: 0;
 }
+
+
 
 .subtitle {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 1rem;
-}
-/* 
-nav {
-    font-size: 1rem;
-    color: #707070;  
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #1792d2;
+    font-size: .75rem;
+    margin: 0;
+
 }
 
-ul {
-    display: flex;
-    list-style-type: none;
-} */
+header {
+    text-align: center;
+    background-color: #f8f8f8;
+    padding: 2em 0;
+}
 
 nav ul {
-
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+      
 }
 
 nav li {
-
+    margin: 0 1em;
+    font-size: 1rem;
+    color: #707070;
 }
 
 nav a {
-
+    text-decoration: none;
+    color: #707070;
+    font-weight: 700;
 }
 
-nav a:hover {
-    
+nav a:hover,
+nav a:focus {
+    color: #1792d2;
 }
