--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@ body {
 
 /* typography */
 
+
+
 h1 {
     font-family: 'Lora', serif;
     font-weight: 400;
@@ -34,6 +36,8 @@ h1 {
     display: flex;
     justify-content: space-between;
 }
+
+
 
 header {
     background-color: #f8f8f8;
@@ -70,4 +74,23 @@ nav a:focus {
 
 .current-page:hover {
     color: #707070;
+}
+
+@media (max-width: 675px) {
+    .container-nav {
+        flex-direction: column;
+    }
+
+    header {
+        text-align: center;
+    }
+
+    nav ul {
+        flex-direction: column;
+    }
+
+    nav li {
+        margin: .5em 0;
+    }
+    
 }
