--- a/css/styles.css
+++ b/css/styles.css
@@ -1,96 +1,138 @@
 body {
-    margin: 0;
-    font-family: 'Ubuntu', sans-serif;
+  margin: 0;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 1.125rem;
+  font-weight: 300;
 }
 
 /* typography */
 
-
+h1,
+h2,
+h3 {
+  font-family: "Lora", serif;
+  font-weight: 400;
+  color: #143774;
+}
 
 h1 {
-    font-family: 'Lora', serif;
-    font-weight: 400;
-    color: #143774;
-    font-size: 2rem;
-    margin: 0;
+  font-size: 2rem;
+  margin: 0;
 }
 
+a {
+    color: #1792d2;
+}
 
+a:hover,
+a:focus {
+    color: #143774;
+}
+
+strong {
+    font-weight: 700;
+}
 
 .subtitle {
-    font-weight: 700;
-    text-transform: uppercase;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #1792d2;
+  font-size: 0.75rem;
+  margin: 0;
+}
+
+.article-title {
+    font-size: 1.5rem;
+}
+
+.article-read-more,
+.article-info {
+    font-size: 0.875rem;
+}
+
+.article-read-more {
     color: #1792d2;
-    font-size: .75rem;
-    margin: 0;
+    text-decoration: none;
+    font-weight: 700;
+}
+
+.article-read-more:hover,
+.article-read-more:focus {
+    color: #143774;
+    text-decoration: underline;
 
 }
 
+.article-image,
+.widget-image {
+    max-width: 50%;
+    max-height: 50%;
+}
+
+
+/* layout */
+
 .conatiner {
-    width: 90%;
-    max-width: 900px;
-    margin: 0 auto;
+  width: 90%;
+  max-width: 900px;
+  margin: 0 auto;
 }
 
 .container-nav {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
-
-
 header {
-    background-color: #f8f8f8;
-    padding: 2em 0;
+  background-color: #f8f8f8;
+  padding: 2em 0;
 }
 
 nav ul {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-      
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
 }
 
 nav li {
-    margin-left: 2em;
+  margin-left: 2em;
 }
 
 nav a {
-    text-decoration: none;
-    color: #707070;
-    font-weight: 700;
-    padding: .25em 0;
+  text-decoration: none;
+  color: #707070;
+  font-weight: 700;
+  padding: 0.25em 0;
 }
 
 nav a:hover,
 nav a:focus {
-    color: #1792d2;
+  color: #1792d2;
 }
 
 .current-page {
-    border-bottom: 1px solid #707070
+  border-bottom: 1px solid #707070;
 }
 
 .current-page:hover {
-    color: #707070;
+  color: #707070;
 }
 
 @media (max-width: 675px) {
-    .container-nav {
-        flex-direction: column;
-    }
+  .container-nav {
+    flex-direction: column;
+  }
 
-    header {
-        text-align: center;
-    }
+  header {
+    text-align: center;
+  }
 
-    nav ul {
-        flex-direction: column;
-    }
+  nav ul {
+    flex-direction: column;
+  }
 
-    nav li {
-        margin: .5em 0;
-    }
-    
+  nav li {
+    margin: 0.5em 0;
+  }
 }
