--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,7 @@ header {
   background-color: #f8f8f8;
   padding: 2em 0;
   text-align: center;
+  margin-bottom: 3em;
 }
 
 @media (min-width: 675px) {
@@ -172,4 +173,32 @@ nav a:focus {
 
 .article-recent-secondary {
   order: 1;
+}
+
+@media (min-width: 675px) {
+  .article-recent {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .article-recent-main {
+    width: 67%;
+  }
+ 
+  .article-recent-secondary {
+    width: 30%;
+  }
+
+  .article-featured {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .article-image {
+    order: -2;
+  }
+
+  .article-info {
+    order: -1;
+  }
 }
