--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,16 @@ strong {
   margin: 2em 0;
 }
 
+.widget-title,
+.widget-recent-post-title {
+  font-size: 1rem;
+}
+
+.widget-title {
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 700;
+}
+
 
 /* layout */
 
@@ -95,17 +105,26 @@ header {
   margin-bottom: 3em;
 }
 
+footer {
+  background-color: #143774;
+  color: white;
+  text-align: center;
+  padding: 3em 0;
+}
+
 @media (min-width: 675px) {
     .container-flex {
         flex-direction: row;
     }
 
     main {
-        width: 75%;
+        width: 70%;
     }
 
     aside {
-        width: 20%;
+        width: 25%;
+        min-width: 200px;
+        margin-left: 1em;
     }
 }
 
@@ -182,7 +201,7 @@ nav a:focus {
   }
 
   .article-recent-main {
-    width: 67%;
+    width: 68%;
   }
  
   .article-recent-secondary {
@@ -196,9 +215,36 @@ nav a:focus {
 
   .article-image {
     order: -2;
+    min-height: 250px;
+    object-fit: cover;
+    /* object-position: left; */
   }
 
   .article-info {
     order: -1;
   }
+}
+
+/* widgets */
+
+.sidebar-widget {
+  border: 20px solid #efefef;
+  margin-bottom: 2em;
+  padding: 1em;
+}
+
+.widget-recent-post {
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid #707070;
+  margin-bottom: 1em;
+}
+
+.widget-recent-post:last-child {
+  border: 0;
+  margin: 0;
+}
+
+.widget-image {
+  order: -1;
 }
