--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ strong {
   color: #1792d2;
   font-size: 0.75rem;
   margin: 0;
+  text-transform: uppercase;
 }
 
 .article-title {
@@ -85,6 +86,7 @@ strong {
 .widget-title,
 .widget-recent-post-title {
   font-size: 1rem;
+  line-height: 1.4;
 }
 
 .widget-title {
