--- a/css/styles.css
+++ b/css/styles.css
@@ -116,15 +116,15 @@ strong {
 }
 
 header {
-  background-color: #f8f8f8;
+  background-color: #89c9e0;
   padding: 2em 0;
   text-align: center;
   margin-bottom: 3em;
 }
 
 footer {
-  background-color: #143774;
-  color: white;
+  background-color: #345480;
+  color: rgba(255,255,255,.65);
   text-align: center;
   padding: 3em 0;
 }
